--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -7,4 +7,13 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 109px 1fr 1fr 1fr 1fr;
+
+  @media screen and (min-width: 850px) {
+    grid-template-rows: 109px 2fr 1fr 1fr 1fr;
+  }
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(333px, 1fr));
 }
