--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,20 +1,31 @@
 .h-section {
-    margin: 3em 0;
-    position: relative;
+  margin: 3em 0;
+  position: relative;
+  background-color: transparent;
 
-    &__text {
-        @media screen and (min-width: 650px) {
-            width: 500px;
-            margin-left: 10%;
-        }
+  &::before {
+    @media screen and (min-width: 850px) {
+      content: " ";
+      position: absolute;
+      height: 950px;
+      z-index: -1;
+      background-image: url("../img/bg-hero.svg");
+      width: 100vw;
+      background-size: cover;
+      background-position: top right;
     }
+  }
 
-    &__img {
-        @media screen and (min-width: 850px) {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 100%;
-        }
+  &__text {
+    @media screen and (min-width: 650px) {
+      width: 500px;
+      margin-left: 10%;
     }
+  }
+
+  &__img {
+    @media screen and (min-width: 850px) {
+      display: none;
+    }
+  }
 }
